[gd_scene load_steps=2 format=3 uid="uid://cssoj57fy22jp"]

[ext_resource type="Script" uid="uid://cyl7rov26tlcj" path="res://entities/systems/cover_system_area.gd" id="1_h0m7l"]

[node name="CoverSystemArea" type="Node3D"]
script = ExtResource("1_h0m7l")

[node name="CoverMarker3D" type="Marker3D" parent="."]

[node name="CoverArea" type="Area3D" parent="."]
collision_layer = 4096

[node name="CollisionShape3D" type="CollisionShape3D" parent="CoverArea"]
debug_color = Color(0.858824, 0, 0.341176, 1)

[node name="SnapArea" type="Area3D" parent="." groups=["CoverArea"]]
collision_layer = 4096

[node name="CollisionShape3D" type="CollisionShape3D" parent="SnapArea"]
debug_color = Color(0, 0.541176, 0.631373, 1)

[connection signal="body_entered" from="CoverArea" to="." method="_on_cover_area_body_entered"]
[connection signal="body_exited" from="CoverArea" to="." method="_on_cover_area_body_exited"]
[connection signal="body_entered" from="SnapArea" to="." method="_on_snap_area_body_entered"]
